--- a/app/src/main/res/layout/fragment3.xml
+++ b/app/src/main/res/layout/fragment3.xml
@@ -18,5 +18,10 @@
         android:layout_centerInParent="true"
         android:text="@string/text_3"/>
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="@dimen/image_height"
+        android:layout_height="@dimen/image_wight" />
+
 
 </RelativeLayout>
